# pkg/model/adminmodel/admin_user_extra.go
@@ -3,6 +3,8 @@ package adminmodel
 import (
 	"encoding/json"
 
+	"gorm.io/gorm"
+
 	"kratos-admin/pkg/toolbox/utils"
 )
 
@@ -29,4 +31,21 @@ func (a *AdminUserExtra) ToJson() string {
 
 	data, _ := json.Marshal(a)
 	return string(data)
+}
+
+// BeforeSave 保证 JSON 列写入合法值（MySQL 不接受空字符串）
+func (u *AdminUser) BeforeSave(_ *gorm.DB) error {
+	return u.normalizeExtra()
+}
+
+// BeforeUpdate 与 BeforeSave 相同；CacheRepo.Update 走 Updates，只会触发 BeforeUpdate
+func (u *AdminUser) BeforeUpdate(_ *gorm.DB) error {
+	return u.normalizeExtra()
+}
+
+func (u *AdminUser) normalizeExtra() error {
+	if u.Extra == "" {
+		u.Extra = "{}"
+	}
+	return nil
 }
